--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -18,6 +18,8 @@ jobs:
     strategy:
       matrix:
         homeserver: [synapse, dendrite, conduit]
+      # since the dendrite job is optional, actually run all tests to the end instead of failing on first error.
+      fail-fast: false
     steps:
       - uses: actions/checkout@v3
       - name: Run tests
@@ -36,8 +38,8 @@ jobs:
           scripts/prepare.sh
           scripts/test_driver.sh"
 
-# coverage is done on the flutter-linux image because we setup olm there
-# coverage_without_olm is done on dart images because why not :D
+  # coverage is done on the flutter-linux image because we setup olm there
+  # coverage_without_olm is done on dart images because why not :D
   coverage:
     runs-on: ubuntu-latest
     container:
@@ -62,7 +64,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run tests
         run: |
-          apt-get update && apt-get install --no-install-recommends --no-install-suggests -y curl lcov python3 python3-distutils
+          apt-get update && apt-get install --no-install-recommends --no-install-suggests -y curl lcov python3 python3-distutils libsqlite3-dev
           curl -o /bin/lcov_cobertura.py https://raw.githubusercontent.com/eriwen/lcov-to-cobertura-xml/master/lcov_cobertura/lcov_cobertura.py && sed 's/env python/env python3/' -i /bin/lcov_cobertura.py && chmod +x /bin/lcov_cobertura.py
           dart pub get
           ./scripts/test.sh
