--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: matrix
 description: Matrix Dart SDK
-version: 0.22.4
+version: 0.25.4
 homepage: https://famedly.com
 repository: https://github.com/famedly/matrix-dart-sdk.git
+issue_tracker: https://github.com/famedly/matrix-dart-sdk/issues
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -18,24 +19,26 @@ dependencies:
   hive: ^2.2.3
   html: ^0.15.0
   html_unescape: ^2.0.0
-  http: ^0.13.0
+  http: ">=0.13.0 <2.0.0"
   image: ^4.0.15
   js: ^0.6.3
-  markdown: ^4.0.0
+  markdown: ^7.1.1
   matrix_api_lite: ^1.7.0
   mime: ^1.0.0
   olm: ^2.0.2
   random_string: ^2.3.1
   sdp_transform: ^0.3.2
   slugify: ^2.0.0
+  sqflite_common: ^2.4.5
   typed_data: ^1.3.2
   webrtc_interface: ^1.0.13
 
 dev_dependencies:
   coverage: ">=0.15.0 <2.0.0"
-  file: ^6.1.1
+  file: ">=6.1.1 <8.0.0"
   import_sorter: ^4.6.0
-  lints: ^2.0.0
+  lints: ^3.0.0
+  sqflite_common_ffi: ^2.2.5
   test: ^1.15.7
   #flutter_test: {sdk: flutter}
 #dependency_overrides:
